@@ -1,3 +1,9 @@
+Mon 14 Jun 2004   Lachlan Andrew  <lha at users.sourceforge.net>
+
+    * htdig/Retriever.cc:
+      Don't check for interrupt between popping a URL and processing it,
+      so that url_log (db.log) truly contains all URLs seen but not processed.
+
 Mon Jun 14 10:08:01 CEST 2004 Gabriele Bartolini <angusgb@users.sourceforge.net>
 
     * Tagged release htdig-3-2-0b6
